@@ -2,6 +2,7 @@ import unittest
 import Tkinter
 import ttk
 from test.test_support import requires, run_unittest
+import sys
 
 import support
 from test_functions import MockTclObj, MockStateSpec
@@ -560,11 +561,19 @@ class NotebookTest(unittest.TestCase):
 
         self.nb.pack()
         self.nb.wait_visibility()
-        self.assertEqual(self.nb.tab('@5,5'), self.nb.tab('current'))
+        if sys.platform == 'darwin':
+            tb_idx = "@20,5"
+        else:
+            tb_idx = "@5,5"
+        self.assertEqual(self.nb.tab(tb_idx), self.nb.tab('current'))
 
         for i in range(5, 100, 5):
-            if self.nb.tab('@%d, 5' % i, text=None) == 'a':
-                break
+            try:
+                if self.nb.tab('@%d, 5' % i, text=None) == 'a':
+                    break
+            except Tkinter.TclError:
+                pass
+
         else:
             self.fail("Tab with text 'a' not found")
 
@@ -721,7 +730,10 @@ class NotebookTest(unittest.TestCase):
         self.nb.enable_traversal()
         self.nb.focus_force()
         support.simulate_mouse_click(self.nb, 5, 5)
-        self.nb.event_generate('<Alt-a>')
+        if sys.platform == 'darwin':
+            self.nb.event_generate('<Option-a>')
+        else:
+            self.nb.event_generate('<Alt-a>')
         self.assertEqual(self.nb.select(), str(self.child1))
 
 
